manifests/deployment.yaml
# Copyright 2023 The Kubernetes Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cel-shim-webhook
  labels:
    app: cel-shim-webhook
spec:
  selector:
    matchLabels:
      app: cel-shim-webhook
  template:
    metadata:
      labels:
        app: cel-shim-webhook
    spec:
      serviceAccountName: cel-webhook
      containers:
        - name: cel-shim-webhook
          image: kubernetes-x/cel-shim-webhook:v1
          args:
            - -cert=/etc/tls/tls.crt
            - -key=/etc/tls/tls.key
            - -addr=:443
          volumeMounts:
            - mountPath: "/etc/tls"
              name: tls
              readOnly: true
      volumes:
        - name: tls
          secret:
            # kubectl create secret tls cel-shim-webhook.tls.example.com --cert=server.pem --key=server-key.pem
            secretName: cel-shim-webhook.tls.example.com
