manifests/alertmanager.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admission-server-armo
  namespace: celshim
  labels:
    app: admission-server-armo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: admission-server-armo
  template:
    metadata:
      labels:
        app: admission-server-armo
    spec:
      containers:
      - name: alertmanager
        image: quay.io/prometheus/alertmanager:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9093
---
apiVersion: v1
kind: Service
metadata:
  name: armo-alertmanager
  namespace: celshim
spec:
  type: NodePort
  selector:
    app: admission-server-armo
  ports:
    - port: 9093
      targetPort: 9093
      nodePort: 30093
